# hybrid-rag-wiki

./: README.md  pyproject.toml
db/migrations/: 001_mvp_simple_data_model.sql  002_mvp_graph_view.sql
docs/: part-2-core-data-model-outline.md  product-creation-outline.md  step-1-markdown-graph-mvp-outline.md
src/hybrid_rag_wiki/: __init__.py
src/hybrid_rag_wiki/api/: app.py  schemas.py  service.py
src/hybrid_rag_wiki/ingestion/: __init__.py  models.py  normalize.py  parser.py  pipeline.py  repository.py
src/hybrid_rag_wiki/web/: index.html
tests/: test_api_endpoints.py  test_ingestion_pipeline.py
